# flame_decoration_simulator

./: Cargo.toml  LICENSE  README.md
src/: app.rs  intro.rs  logging.rs  main.rs  simulations.rs  types.rs
src/simulations/: always_on_sim.rs  candle_colored.rs  flash_every_second.rs  height_flicker.rs  rainbow_flood.rs
