[package]
name = "flame_decoration_simulator"
version = "0.1.0"
authors = ["rivques <38469076+rivques@users.noreply.github.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
rand = "0.9.0"
tracing-error = "0.2.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
directories = "5.0.1"
lazy_static = "1.5.0"
